mongo-status.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mongo"},"name":"mongo-depl","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"mongo"}},"template":{"metadata":{"labels":{"app":"mongo"}},"spec":{"containers":[{"image":"mongo:latest","name":"mongo","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2023-10-21T12:43:20Z"
  generation: 1
  labels:
    app: mongo
  name: mongo-depl
  namespace: default
  resourceVersion: "10313"
  uid: 16a5f1e5-c8d3-4ac4-86fa-50cfecd571ba
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo:latest
        imagePullPolicy: Always
        name: mongo
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2023-10-21T12:44:56Z"
    lastUpdateTime: "2023-10-21T12:44:56Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-10-21T12:43:20Z"
    lastUpdateTime: "2023-10-21T12:44:56Z"
    message: ReplicaSet "mongo-depl-d745b6d8c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
