service-config.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongo-service
spec:
  selector:
    app : mongo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
