mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: mongo-express-service
                port:
                  # should be the same port as that of the service
                  number: 8081
